# Grldd

./: README.md  grldd.cabal
Src/: Dpkg.hs  Graph.hs  Ldd.hs  Main.hs  Types.hs
Src/Ldd/: Parser.hs
Test/: GraphTest.hs  ParserTest.hs  Test.hs
