Name:        grldd
Version:     0.2.2
Synopsis:    Recursive dependency printing tool
Description:
        A simple recursive dependency printing tool for ELF objects.
        Based on the GNU ldd command output. It generates graphviz dot
	file as output.
License:     GPL
License-File: LICENSE
Author:      Laszlo Nagy
Maintainer:  rizsotto@gmail.com
Category:    System
Stability:   Experimental
Build-type:  Simple
Cabal-Version: >= 1.2

Executable grldd
        hs-source-dirs: Src
        Main-Is:        Main.hs
        other-modules:  Types Graph Ldd Ldd.Parser

        Build-Depends:  base,
                        mtl,
                        parsec,
                        unix,
                        fgl,
                        process

Executable unit-test
        Buildable:      False
        hs-source-dirs: Src Test
        Main-Is:        Test.hs
        other-modules:  ParserTest
        Build-Depends:  HUnit
