Name:        grldd
Version:     0.4.0
Synopsis:    Recursive dependency printing tool
Description:
        A simple recursive dependency printing tool for ELF objects.
        Based on the GNU ldd command output. It generates graphviz dot
	file as output.
License:     GPL
License-File: LICENSE
Author:      Laszlo Nagy
Maintainer:  rizsotto@gmail.com
Category:    System
Stability:   Experimental
Build-type:  Simple
Cabal-Version: >= 1.2

Executable grldd
        extensions:     ScopedTypeVariables
        hs-source-dirs: Src
        Main-Is:        Main.hs
        other-modules:  Graph Ldd Dpkg

        Build-Depends:  base,
                        mtl,
                        parsec,
                        unix,
                        fgl,
                        process,
                        containers

Executable unit-test
        --Buildable:      False
        extensions:     TypeSynonymInstances
        hs-source-dirs: Src Test
        Main-Is:        Test.hs
        other-modules:  GraphTest ParserTest 
        Build-Depends:  HUnit
